--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "seekkrr-frontend",
-  "private": true,
+  "name": "hero-landing-vite",
   "version": "1.0.0",
   "type": "module",
-  "description": "SeekKrr landing page - Production ready React application",
+  "description": "Modern React + Vite landing page with optimized SVG rendering",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "eslint src --ext .js,.jsx",
+    "type-check": "tsc --noEmit",
+    "postinstall": "patch-package",
+    "postinstall-postinstall": "patch-package"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "terser": "^5.44.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "terser": "^5.44.0",
-    "vite": "^5.4.2"
-  },
-  "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
+    "@types/node": "^24.10.0",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.54.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
+    "typescript": "^5.3.3",
+    "vite": "^7.2.2"
   }
 }
