--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "terser": "^5.44.1"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
@@ -28,6 +27,11 @@
     "patch-package": "^8.0.1",
     "postinstall-postinstall": "^2.1.0",
     "typescript": "^5.3.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "terser": "^5.44.1"
+  },
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
