--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postinstall-postinstall": "patch-package"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -26,9 +27,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "patch-package": "^8.0.1",
     "postinstall-postinstall": "^2.1.0",
+    "terser": "^5.44.1",
     "typescript": "^5.3.3",
-    "vite": "^7.2.2",
-    "terser": "^5.44.1"
+    "vite": "^7.2.2"
   },
   "engines": {
     "node": ">=16.0.0",
